--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="C'est ici que j'apprends le dev Front-End">
     <title>Calculateur cercle</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../bulma/css/bulma-rtl.min.css">
     <link rel="icon" href="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,30 +16,36 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap" rel="stylesheet">
 
-
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script type="text/javascript" src="Mathjax.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v6.4.0/js/all.js"></script>
 </head>
 
 <body>
 
-    <div class="container">
+    <div class="container1">
         <div class="peri">
             <h1>périmètre: </h1>
-            <input type="number" id="perimetre" placeholder="Entre un nombre">
+            <input class="input is-rounded is-link" type="number" id="perimetre" placeholder="Entre un nombre">
         </div>
         <div class="aire">
             <h1>aire: </h1>
-            <input type="number" id="aire" placeholder="Entre un nombre">
+            <input class="input is-rounded is-link" type="number" id="aire" placeholder="Entre un nombre">
         </div>
         <div class="diam">
             <h1>diametre: </h1>
-            <input type="number" id="diametre" placeholder="Entre un nombre">
+            <input class="input is-rounded is-link" type="number" id="diametre" placeholder="Entre un nombre">
         </div>
         <div class="rayon">
             <h1>rayon: </h1>
-            <input type="number" id="rayon" placeholder="Entre un nombre">
-            <button>Calculer</button>
+            <input class="input is-rounded is-link" type="number" id="rayon" placeholder="Entre un nombre">
         </div>
+    </div>
+    <button id="calcul" class="button is-link is-light mt-3">Calculer</button>
+    <button id="btnReset" class="button is-link is-light mt-3">Reset</button>
+
+    <div class="equation">
+
     </div>
 
 
