--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script defer src="https://use.fontawesome.com/releases/v6.4.0/js/all.js"></script>
 </head>
 
-<body>
+<body class="has-background-grey-lighter">
 
     <div class="container1">
         <div class="peri">
