--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <input class="input is-rounded is-link" type="number" id="rayon" placeholder="Entre un nombre">
         </div>
     </div>
-    <button id="calcul" class="button is-link is-light mt-3">Calculer</button>
-    <button id="btnReset" class="button is-link is-light mt-3">Reset</button>
+    <button id="calcul" class="button is-danger is-light mt-3">Calculer</button>
+    <button id="btnReset" class="button is-danger is-light mt-3">Reset</button>
 
     <div class="equation">
 
