--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
 <body class="has-background-grey-lighter">
 
+    <h1 class="title has-text-centered">Calculateur Cercle</h1>
+    <p class="subtitle has-text-centered">Sélectionnez le type de valeur que vous souhaitez entrer (rayon, diamètre, périmètre ou aire)</p>
     <div class="container1">
         <div class="peri">
             <h1>périmètre: </h1>
