--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     <script defer src="https://use.fontawesome.com/releases/v6.4.0/js/all.js"></script>
 </head>
 
-<body class="has-background-grey-lighter">
+<body id="body" class="has-background-grey-lighter">
 
     <h1 class="title has-text-centered">Calculateur Cercle</h1>
-    <p class="subtitle has-text-centered">Sélectionnez le type de valeur que vous souhaitez entrer (rayon, diamètre, périmètre ou aire)</p>
+    <p class="subtitle has-text-centered">Entrez une valeur parmi le (rayon, diamètre,
+        périmètre ou aire)</p>
     <div class="container1">
         <div class="peri">
             <h1>périmètre: </h1>
@@ -46,8 +47,10 @@
     <button id="calcul" class="button is-danger is-light mt-3">Calculer</button>
     <button id="btnReset" class="button is-danger is-light mt-3">Reset</button>
 
-    <div class="equation">
+    <div class="eqPar">
+        <div class="equation">
 
+        </div>
     </div>
 
 
