--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="C'est ici que j'apprends le dev Front-End">
+    <meta name="description" content="Calculateur cercle">
     <title>Calculateur cercle</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bulma/css/bulma-rtl.min.css">
@@ -18,7 +18,6 @@
 
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script type="text/javascript" src="Mathjax.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v6.4.0/js/all.js"></script>
 </head>
 
 <body id="body" class="has-background-grey-lighter">
